--- a/package.json
+++ b/package.json
@@ -109,7 +109,6 @@
     "react-cosmos": "^5.6.3",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
-    "react-ga": "^2.5.7",
     "react-is": "^17.0.2",
     "react-markdown": "^4.3.1",
     "react-popper": "^2.2.3",
@@ -149,6 +148,7 @@
     "postinstall": "yarn contracts:compile && yarn graphql:generate && yarn i18n:compile",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve build -l 3000",
     "test": "react-scripts test --env=./custom-test-env.js",
     "test:e2e": "start-server-and-test 'serve build -l 3000' http://localhost:3000 'cypress run --record'",
     "bundle": "microbundle --tsconfig tsconfig.lib.json src/lib/index.tsx --format esm,cjs",
